[package]
name = "discord-api-endpoints-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.2"
fancy-regex = "0.10"
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
